--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,13 +20,13 @@
     <string name="feedback_dialog_message">If you want, add a feedback about the application:</string>
     <string name="feedback_hint">You feedback</string>
     <string name="feedback_sent_notification">"Thank you! Your review has been sent"</string>
+    <string name="action_individual_task">Individual task: 5</string>
     <string name="application_list_loading">Loading applications info&#8230;</string>
     <string name="copy_application_name_menu_item">Copy name</string>
     <string name="copy_application_package_menu_item">Copy package</string>
     <string name="show_application_info_menu_item">Show info</string>
     <string name="copying_notification">Скопировано в буфер обмена:</string>
     <string name="not_implemented_message">Not yet implemented</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="launch_last_lab_menu_item">Last launched laboratory work</string>
+    <string name="clear_settings_menu_item">Clear SharedPreferences</string>
 </resources>
